[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://assets/music/Visager_-_20_-_Factory_Time_Loop.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/music/Visager_-_31_-_Final_Sacrifice_Loop.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/music/Visager_-_24_-_Witchs_Hut_Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/music/Visager_-_30_-_Inside_the_Tower_Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/music/Visager_-_32_-_End_Credits_Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/music/Visager_-_18_-_Royal_Entrance_Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/music/Visager_-_28_-_Miniboss_Fight_Loop.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/music/Visager_-_29_-_Eerie_Mausoleum_Loop.ogg" type="AudioStream" id=9]

[node name="MusicManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LevelTracks" type="Node" parent="."]

[node name="Intro" type="AudioStreamPlayer" parent="LevelTracks"]
stream = ExtResource( 4 )

[node name="Level1" type="AudioStreamPlayer" parent="LevelTracks"]
stream = ExtResource( 2 )

[node name="Level2" type="AudioStreamPlayer" parent="LevelTracks"]
pause_mode = 2
stream = ExtResource( 5 )

[node name="Level3" type="AudioStreamPlayer" parent="LevelTracks"]
stream = ExtResource( 9 )

[node name="Level4" type="AudioStreamPlayer" parent="LevelTracks"]
stream = ExtResource( 8 )

[node name="Level5" type="AudioStreamPlayer" parent="LevelTracks"]
stream = ExtResource( 3 )

[node name="Credits" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
